[tool.poetry]
name = "personal_blog"
version = "0.1.0"
description = ""
authors = ["CommandReverse <jelted@hotmail.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.15.0"
flask-sqlalchemy = "^2.4.4"
flask-wtf = "^0.14.3"
flask-login = "^0.5.0"
flask-migrate = "^2.5.3"
flask-mail = "^0.9.1"
flask-moment = "^0.10.0"
email_validator = "^1.1.2"
flask-bootstrap = "^3.3.7"
flask-pagedown = "^0.3.0"
markdown = "^3.3.3"
bleach = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
